ci: enhance development workflow and project configuration
- feat: update pre-commit hook to auto-fix lint issues
- chore: configure Biome to include more file types
- feat: add server-related npm scripts for development
- style: improve HTML formatting across static files
- refactor: add ES Module compatibility for server code

--- a/server/public/contact.html
+++ b/server/public/contact.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <!-- Website template by freewebsitetemplates.com -->
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<title>Contact - Travlr Getaways Website Template</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
+
 <body>
 	<div id="background">
 		<div id="page">
@@ -50,16 +52,20 @@
 										<tr>
 											<td>Name:</td>
 											<td><input type="text" value="" class="txtfield"></td>
-										</tr> <tr>
+										</tr>
+										<tr>
 											<td>Email:</td>
 											<td><input type="text" value="" class="txtfield"></td>
-										</tr> <tr>
+										</tr>
+										<tr>
 											<td>Subject:</td>
 											<td><input type="text" value="" class="txtfield"></td>
-										</tr> <tr>
+										</tr>
+										<tr>
 											<td class="txtarea">Message:</td>
 											<td><textarea></textarea></td>
-										</tr> <tr>
+										</tr>
+										<tr>
 											<td></td>
 											<td><input type="submit" value="" class="btn"></td>
 										</tr>
@@ -107,7 +113,10 @@
 					</li>
 				</ul>
 				<div id="connect">
-					<a href="http://pinterest.com/fwtemplates/" target="_blank" class="pinterest"></a> <a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a> <a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a>
+					<a href="http://pinterest.com/fwtemplates/" target="_blank" class="pinterest"></a> <a
+						href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a> <a
+						href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a> <a
+						href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a>
 				</div>
 			</div>
 			<p>
@@ -116,4 +125,5 @@
 		</div>
 	</div>
 </body>
+
 </html>
