--- a/server/public/rooms.html
+++ b/server/public/rooms.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <!-- Website template by freewebsitetemplates.com -->
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<title>Rooms - Travlr Getaways Website Template</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
+
 <body>
 	<div id="background">
 		<div id="page">
@@ -49,7 +51,9 @@
 									<a href="rooms.html"><img src="images/first-class.jpg" alt="Img"></a>
 									<h2><a href="rooms.html">First Class Room</a></h2>
 									<p>
-										Cras dui sapien, feugiat vitae tristique ut, lobortis tempor orci. Donec pulvinar sagittis metus ut tristique. Pellentes que habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas idios.
+										Cras dui sapien, feugiat vitae tristique ut, lobortis tempor orci. Donec
+										pulvinar sagittis metus ut tristique. Pellentes que habitant morbi tristique
+										senectus et netus et malesuada fames ac turpis egestas idios.
 									</p>
 									<span class="rate">Rate: 220 / Day</span>
 								</li>
@@ -57,7 +61,9 @@
 									<a href="rooms.html"><img src="images/deluxe.jpg" alt="Img"></a>
 									<h2><a href="rooms.html">Deluxe Room</a></h2>
 									<p>
-										Sed et augue lorem. In sit amet placerat arcu. Mauris volutpat ipsum ac justo mollis vel vestibulum orci gravida. Vestibulum sit amet porttitor odio. Nulla facilisi. Fusce at pretium felis.
+										Sed et augue lorem. In sit amet placerat arcu. Mauris volutpat ipsum ac justo
+										mollis vel vestibulum orci gravida. Vestibulum sit amet porttitor odio. Nulla
+										facilisi. Fusce at pretium felis.
 									</p>
 									<span class="rate">Rate: 150 / Day</span>
 								</li>
@@ -65,7 +71,9 @@
 									<a href="rooms.html"><img src="images/suite.jpg" alt="Img"></a>
 									<h2><a href="rooms.html">Suite Room</a></h2>
 									<p>
-										Sed et augue lorem. In sit amet placerat arcu. Mauris volutpat ipsum ac justo mollis vel vestibulum orci gravida. Vestibulum sit amet porttitor odio. Nulla facilisi. Fusce at pretium felis.
+										Sed et augue lorem. In sit amet placerat arcu. Mauris volutpat ipsum ac justo
+										mollis vel vestibulum orci gravida. Vestibulum sit amet porttitor odio. Nulla
+										facilisi. Fusce at pretium felis.
 									</p>
 									<span class="rate">Rate: 180 / Day</span>
 								</li>
@@ -101,7 +109,10 @@
 					</li>
 				</ul>
 				<div id="connect">
-					<a href="http://pinterest.com/fwtemplates/" target="_blank" class="pinterest"></a> <a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a> <a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a>
+					<a href="http://pinterest.com/fwtemplates/" target="_blank" class="pinterest"></a> <a
+						href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a> <a
+						href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a> <a
+						href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a>
 				</div>
 			</div>
 			<p>
@@ -110,4 +121,5 @@
 		</div>
 	</div>
 </body>
+
 </html>
