--- a/server/public/404.html
+++ b/server/public/404.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<title>404 - Page Not Found | Travlr Getaways</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
+
 <body>
 	<div id="background">
 		<div id="page">
@@ -49,7 +51,9 @@
 									We're sorry, but the page you're looking for cannot be found.
 								</p>
 								<p>
-									<a href="index.html" style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #4c8f96; color: #fff; text-decoration: none; border-radius: 5px;">Return to Home Page</a>
+									<a href="index.html"
+										style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #4c8f96; color: #fff; text-decoration: none; border-radius: 5px;">Return
+										to Home Page</a>
 								</p>
 							</div>
 						</div>
@@ -83,7 +87,10 @@
 					</li>
 				</ul>
 				<div id="connect">
-					<a href="http://pinterest.com/fwtemplates/" target="_blank" class="pinterest"></a> <a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a> <a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a>
+					<a href="http://pinterest.com/fwtemplates/" target="_blank" class="pinterest"></a> <a
+						href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a> <a
+						href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a> <a
+						href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a>
 				</div>
 			</div>
 			<p>
@@ -92,4 +99,5 @@
 		</div>
 	</div>
 </body>
+
 </html>
