--- a/server/public/error.html
+++ b/server/public/error.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<title>Server Error | Travlr Getaways</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
+
 <body>
 	<div id="background">
 		<div id="page">
@@ -46,10 +48,13 @@
 								<h1 style="font-size: 48px; margin-bottom: 20px;">500</h1>
 								<h3>Server Error</h3>
 								<p style="margin: 20px 0;">
-									We're sorry, but something went wrong on our end. Our team has been notified and is working to fix the issue.
+									We're sorry, but something went wrong on our end. Our team has been notified and is
+									working to fix the issue.
 								</p>
 								<p>
-									<a href="index.html" style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #4c8f96; color: #fff; text-decoration: none; border-radius: 5px;">Return to Home Page</a>
+									<a href="index.html"
+										style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #4c8f96; color: #fff; text-decoration: none; border-radius: 5px;">Return
+										to Home Page</a>
 								</p>
 							</div>
 						</div>
@@ -83,7 +88,10 @@
 					</li>
 				</ul>
 				<div id="connect">
-					<a href="http://pinterest.com/fwtemplates/" target="_blank" class="pinterest"></a> <a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a> <a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a>
+					<a href="http://pinterest.com/fwtemplates/" target="_blank" class="pinterest"></a> <a
+						href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a> <a
+						href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a> <a
+						href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a>
 				</div>
 			</div>
 			<p>
@@ -92,4 +100,5 @@
 		</div>
 	</div>
 </body>
+
 </html>
