--- a/server/public/news.html
+++ b/server/public/news.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <!-- Website template by freewebsitetemplates.com -->
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<title>News - Travlr Getaways Website Template</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
+
 <body>
 	<div id="background">
 		<div id="page">
@@ -87,13 +89,27 @@
 								<h2>Experience Kayaking!</h2>
 								<span class="time">April 03, 2023<br> by: Juan De La Cruz</span>
 								<p>
-									Sed et augue lorem. In sit amet placerat arcu. Mauris volutpat ipsum ac justo mollis vel vestibulum orci gravida. Vestibulum sit amet porttitor odio. Nulla facilisi. Fusce at pretium felis. Sed consequat libero ut turpis venenatis ut aliquam risus semper. Etiam convallis mi vel risus pretium sodales. Etiam nunc lorem, ullamcorper vitae laoreet id, rutrum et tortor. Vivamus luctus, lacus id egestas facilisis, nunc nunc ultricies lorem, vitae pulvinar nibh urna vel velit.
+									Sed et augue lorem. In sit amet placerat arcu. Mauris volutpat ipsum ac justo mollis
+									vel vestibulum orci gravida. Vestibulum sit amet porttitor odio. Nulla facilisi.
+									Fusce at pretium felis. Sed consequat libero ut turpis venenatis ut aliquam risus
+									semper. Etiam convallis mi vel risus pretium sodales. Etiam nunc lorem, ullamcorper
+									vitae laoreet id, rutrum et tortor. Vivamus luctus, lacus id egestas facilisis, nunc
+									nunc ultricies lorem, vitae pulvinar nibh urna vel velit.
 								</p>
 								<p>
-									Cras dui sapien, feugiat vitae tristique ut, lobortis tempor orci. Donec pulvinar sagittis metus ut tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In hac habitasse platea dictumst. Nulla at nunc sit amet justo cursus imperdiet. Mauris est leo, placerat nec eleifend eu, facilisis id dolor. Donec nisi nibh, elementum vitae imperdiet non, placerat et felis. Maecenas scelerisque odio quis arcu fringilla malesuada. Nulla facilisi. In libero nulla, fermentum ut pretium ac, pharetra et eros.
+									Cras dui sapien, feugiat vitae tristique ut, lobortis tempor orci. Donec pulvinar
+									sagittis metus ut tristique. Pellentesque habitant morbi tristique senectus et netus
+									et malesuada fames ac turpis egestas. In hac habitasse platea dictumst. Nulla at
+									nunc sit amet justo cursus imperdiet. Mauris est leo, placerat nec eleifend eu,
+									facilisis id dolor. Donec nisi nibh, elementum vitae imperdiet non, placerat et
+									felis. Maecenas scelerisque odio quis arcu fringilla malesuada. Nulla facilisi. In
+									libero nulla, fermentum ut pretium ac, pharetra et eros.
 								</p>
 								<p>
-									Phasellus viverra fringilla lacus, malesuada blandit velit iaculis dignissim. Suspendisse rutrum massa mauris. Donec quis tempus elit.Integer magna leo, posuere et dignissim vitae, porttitor at odio. Pellentesque a metus nec magna placerat volutpat.
+									Phasellus viverra fringilla lacus, malesuada blandit velit iaculis dignissim.
+									Suspendisse rutrum massa mauris. Donec quis tempus elit.Integer magna leo, posuere
+									et dignissim vitae, porttitor at odio. Pellentesque a metus nec magna placerat
+									volutpat.
 								</p>
 							</div>
 						</div>
@@ -127,7 +143,10 @@
 					</li>
 				</ul>
 				<div id="connect">
-					<a href="http://pinterest.com/fwtemplates/" target="_blank" class="pinterest"></a> <a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a> <a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a>
+					<a href="http://pinterest.com/fwtemplates/" target="_blank" class="pinterest"></a> <a
+						href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a> <a
+						href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a> <a
+						href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a>
 				</div>
 			</div>
 			<p>
@@ -136,4 +155,5 @@
 		</div>
 	</div>
 </body>
+
 </html>
